<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/brief_dialog"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/add_certificate"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


            <EditText
                android:id="@+id/certificate_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:hint="@string/certificate_title"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:textSize="12sp"
                android:layout_marginStart="5dp"
                tools:ignore="SpeakableTextPresentCheck" />


            <EditText
                android:id="@+id/certificate_width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:hint="@string/ImgWidth"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:textSize="12sp"
                android:layout_marginStart="5dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/certificate_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#00FFFFFF"
                android:hint="@string/ImgHeight"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:layout_marginStart="5dp"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:orientation="horizontal"
            android:padding="0dp">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_marginEnd="25dp"
                android:text="@string/cancel"
                android:textSize="15sp"
                android:gravity="center"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/btn_confirm"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:text="@string/confirm"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>