<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SysSelectActivity">


    <TextView
        android:id="@+id/select_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/select_title"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/select_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1" />

    <ImageView
        android:id="@+id/select_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/select_img"
        android:src="@drawable/ic_person_black"
        app:layout_constraintBottom_toTopOf="@+id/select_introduce"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_title"
        app:layout_constraintVertical_weight="2" />

    <TextView
        android:id="@+id/select_introduce"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="23dp"
        android:src="@drawable/ic_person_black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/select_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_img"
        app:layout_constraintVertical_weight="5" />

    <Button
        android:id="@+id/select_photo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:background="@drawable/shape_select_one"
        android:text="@string/select_photo"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_introduce"
        app:layout_constraintVertical_weight="1"
        tools:ignore="TouchTargetSizeCheck" />



</androidx.constraintlayout.widget.ConstraintLayout>
