<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dialog_select_border"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listViewPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/addPage"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:contentDescription="@string/dialog_add"
                android:src="@drawable/add_line"
                app:tint="@color/black"
                tools:ignore="TouchTargetSizeCheck" />

            <View
                android:layout_width="80dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/buttonIncognito"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/dialog_clear"
                android:src="@drawable/spy_line"
                tools:ignore="TouchTargetSizeCheck" />

            <View
                android:layout_width="80dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/emptyPage"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:contentDescription="@string/dialog_clear"
                android:src="@drawable/delete_bin_line"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/DismissMulti"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/dialog_select"
            android:textColor="#1C1C1C"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>
