<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F5F5"
    android:orientation="vertical"
    tools:context=".activity.SysVolumeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stateListAnimator="@null"
        android:theme="@style/Theme.one.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:layout_anchor="@+id/appBarLayout"
            app:layout_anchorGravity="center"
            app:popupTheme="@style/Theme.one.PopupOverlay"
            app:tabTextAppearance="@style/TabItemApplyText">

            <TextView
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:text="@string/save"
                android:textSize="16sp"
                android:visibility="gone" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">


        <ja.burhanrashid52.photoeditor.PhotoEditorView
            android:id="@+id/volume_image"
            android:layout_width="295dp"
            android:layout_height="413dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/volume_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="选择图片"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/volume_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="10dp"
        android:gravity="center"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/image_size" />

        <TextView
            android:id="@+id/volume_ImageSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/app_cr"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="visible">


        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/volume_seekbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/BG_PATH_DEFAULT"
            app:dsb_indicatorColor="@color/fabColor"
            app:dsb_max="100"
            app:dsb_min="30"
            app:dsb_progressColor="@color/fabColor"
            app:dsb_value="100" />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>