<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">


        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/BG_PATH_DEFAULT"
            android:scrollbars="none">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_margin="5dp">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/chip1"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        app:cardBackgroundColor="#FF9800"
                        app:cardCornerRadius="50dp">
                        <ImageView
                            android:id="@+id/chip1_image"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/app_blue"
                            android:src="@drawable/check"
                            android:visibility="gone" />

                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="自定义">
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_margin="5dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card1"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:backgroundTint="#438edb"
                        app:cardCornerRadius="50dp">

                        <ImageView
                            android:id="@+id/card_image1"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/app_blue"
                            android:src="@drawable/check"
                            android:visibility="visible" />

                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="蓝色">
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_margin="5dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card2"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:backgroundTint="#EFEDED"
                        app:cardCornerRadius="50dp">

                        <ImageView
                            android:id="@+id/card_image2"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/white"
                            android:src="@drawable/check_black"
                            android:visibility="gone" />
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="白色"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_margin="5dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card3"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:backgroundTint="#FFF20000"
                        app:cardCornerRadius="50dp">

                        <ImageView
                            android:id="@+id/card_image3"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/red"
                            android:src="@drawable/check"
                            android:visibility="gone" />
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="红色"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_margin="5dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card4"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:backgroundTint="#FF70A1DB"
                        app:cardCornerRadius="50dp">

                        <ImageView
                            android:id="@+id/card_image4"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/babyblue"
                            android:src="@drawable/check"
                            android:visibility="gone" />
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="浅蓝色"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_margin="5dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card5"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:backgroundTint="#FFAEAFAD"
                        app:cardCornerRadius="50dp">

                        <ImageView
                            android:id="@+id/card_image5"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/gray"
                            android:src="@drawable/check"
                            android:visibility="gone" />
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="灰色"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_margin="5dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card6"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:backgroundTint="#FFF24C4C"
                        app:cardCornerRadius="50dp">

                        <ImageView
                            android:id="@+id/card_image6"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/pompadour"
                            android:src="@drawable/check"
                            android:visibility="gone" />
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="浅红色"/>
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>


    </LinearLayout>

</LinearLayout>