<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F5F5"
    android:orientation="vertical"
    tools:context=".activity.SysApplyActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stateListAnimator="@null"
        android:theme="@style/Theme.one.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:layout_anchor="@+id/appBarLayout"
            app:layout_anchorGravity="center"
            app:popupTheme="@style/Theme.one.PopupOverlay"
            app:tabTextAppearance="@style/TabItemApplyText">

            <TextView
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:text="@string/save"
                android:textSize="16sp"
                android:visibility="gone" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">



        <ja.burhanrashid52.photoeditor.PhotoEditorView
            android:id="@+id/iv_input_image"
            android:layout_width="295dp"
            android:layout_height="413dp" />

        <LinearLayout
            android:id="@+id/ll_image_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/image_size" />

            <TextView
                android:id="@+id/ImageSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/panel"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/app_cr"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/BG_PATH_DEFAULT"
                app:tabIndicatorHeight="0dp"
                app:tabMode="scrollable"
                app:tabRippleColor="@android:color/transparent"
                app:tabTextAppearance="@style/TabItemApplyText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/views_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|center">

            <com.one.browser.view.NoScrollViewPager
                android:id="@+id/viewpager_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/BG_PATH_DEFAULT"
                android:padding="5dp" />
        </LinearLayout>

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>